Possible fix for failing install, backwards compatible way to check for empty string